# timstapaper

./: .gitignore  CODEOWNERS  LICENSE  Makefile  QUICKREF.md  README.md  SECURITY.md  SETUP.md  pytest.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/chatmodes/: devops-engineer.chatmode.md  platform-architect.chatmode.md  platform-mode.chatmode.md  product-manager.chatmode.md  qa-engineer.chatmode.md  scrum-master.chatmode.md  security-engineer.chatmode.md
.github/instructions/: copilot-instructions.md  python.instructions.md  terraform.instruction.md  testing.instructions.md
.github/prompts/: acceptance-test.prompt.md  analysis.prompt.md  blockers.prompt.md  definition-of-done.prompt.md  demo-prep.prompt.md  dependency-map.prompt.md  design.prompt.md  discovery.prompt.md  (+20 more)
src/: .env.example  .gitignore  Dockerfile  docker-compose.yml
src/app/: app.py  pyproject.toml  requirements.txt
src/app/api/: __init__.py
src/app/api/routes/: __init__.py  auth.py  pages.py
src/app/api/routes/v1/: __init__.py  articles.py  deps.py  health.py
src/app/core/: __init__.py  config.py  database.py  models.py  security.py
src/app/schemas/: __init__.py  article.py  user.py
src/app/services/: __init__.py  article_service.py  user_service.py
src/app/templates/: article.html  base.html  dashboard.html  login.html
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_api_v1.py  test_article_extraction.py  test_database.py  test_schemas.py  test_ssrf_protection.py
utils/: add_repo_oidc.sh  platform_bootstrap.sh  sync-gh-variables.sh
(+27 files in other folders)
