[project]
name = "timstapaper"
version = "0.1.0"
description = "A personal reading list application that lets you save articles for later reading"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "authlib==1.6.6",
    "fastapi==0.128.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "lxml[html-clean]>=5.3.0",
    "newspaper4k==0.9.4.1",
    "python-multipart==0.0.21",
    "requests==2.32.5",
    "uvicorn[standard]==0.27.0",
    "httpx==0.28.1",
]
